--- a/package.json
+++ b/package.json
@@ -1,31 +1,4 @@
 {
-  "_from": "node-binance-api@0.9.9",
-  "_id": "node-binance-api@0.9.9",
-  "_inBundle": false,
-  "_integrity": "sha512-ytn8HGpvApcHQuNWtZYjM91HoLc/aRjq34ziQwR3/IPscpL3y66x7D8wRJBByyJcvH/qPurBLXuk2IJME6bAAQ==",
-  "_location": "/node-binance-api",
-  "_phantomChildren": {
-    "async-limiter": "1.0.0",
-    "es6-promisify": "5.0.0"
-  },
-  "_requested": {
-    "type": "version",
-    "registry": true,
-    "raw": "node-binance-api@0.9.9",
-    "name": "node-binance-api",
-    "escapedName": "node-binance-api",
-    "rawSpec": "0.9.9",
-    "saveSpec": null,
-    "fetchSpec": "0.9.9"
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/node-binance-api/-/node-binance-api-0.9.9.tgz",
-  "_shasum": "cc852dcc9ee4a545b8e7ab46d5b16a8d2228c885",
-  "_spec": "node-binance-api@0.9.9",
-  "_where": "C:\\ws\\pareto\\api1",
   "author": {
     "name": "Jon Eyrick",
     "email": "social@nextlocal.net",
@@ -45,7 +18,7 @@
     "ws": "^7.2.0"
   },
   "deprecated": false,
-  "description": "Binance API for node https://github.com/jaggedsoft/node-binance-api",
+  "description": "Binance.US API for node https://github.com/jaggedsoft/node-binance-api",
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-counter": "^1.0.0",
@@ -59,17 +32,17 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1"
   },
-  "homepage": "https://github.com/jaggedsoft/node-binance-api#readme",
+  "homepage": "https://github.com/tdeineka/node-binance-us-api#readme",
   "keywords": [
     "binance",
     "api"
   ],
   "license": "MIT",
   "main": "node-binance-api.js",
-  "name": "node-binance-api",
+  "name": "node-binance-us-api",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jaggedsoft/node-binance-api.git"
+    "url": "git://github.com/tdeineka/node-binance-us-api.git"
   },
   "scripts": {
     "codacy": "cat ./coverage/lcov.info | codacy-coverage -v",
