--- a/package.json
+++ b/package.json
@@ -1,4 +1,30 @@
 {
+  "_from": "node-binance-api@0.10.7",
+  "_id": "node-binance-api@0.10.7",
+  "_inBundle": false,
+  "_integrity": "sha512-lhFqiJkITkNAWuU3HYavyepjEEA4pBgFPEKLxdOKF91sfpbVHToD9qCFV7POA79zeEkLOfwOhmmrE9uNnDW58Q==",
+  "_location": "/node-binance-api",
+  "_phantomChildren": {
+    "es6-promisify": "5.0.0"
+  },
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "node-binance-api@0.10.7",
+    "name": "node-binance-api",
+    "escapedName": "node-binance-api",
+    "rawSpec": "0.10.7",
+    "saveSpec": null,
+    "fetchSpec": "0.10.7"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/node-binance-api/-/node-binance-api-0.10.7.tgz",
+  "_shasum": "fa2790113b64d8136fa0e1000e92d397bf01ca63",
+  "_spec": "node-binance-api@0.10.7",
+  "_where": "C:\\ws\\pareto\\api1",
   "author": {
     "name": "Jon Eyrick",
     "email": "social@nextlocal.net",
@@ -18,7 +44,7 @@
     "ws": "^7.2.0"
   },
   "deprecated": false,
-  "description": "Binance.US API for node https://github.com/jaggedsoft/node-binance-api",
+  "description": "Binance API for node https://github.com/jaggedsoft/node-binance-api",
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-counter": "^1.0.0",
@@ -32,17 +58,17 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1"
   },
-  "homepage": "https://github.com/tdeineka/node-binance-us-api#readme",
+  "homepage": "https://github.com/jaggedsoft/node-binance-api#readme",
   "keywords": [
     "binance",
     "api"
   ],
   "license": "MIT",
   "main": "node-binance-api.js",
-  "name": "node-binance-us-api",
+  "name": "node-binance-api",
   "repository": {
     "type": "git",
-    "url": "git://github.com/tdeineka/node-binance-us-api.git"
+    "url": "git://github.com/jaggedsoft/node-binance-api.git"
   },
   "scripts": {
     "codacy": "cat ./coverage/lcov.info | codacy-coverage -v",
@@ -53,5 +79,5 @@
     "test": "mocha",
     "test-debug": "mocha --inspect-brk"
   },
-  "version": "0.9.12"
+  "version": "0.10.7"
 }
